--- a/app/global-styles/Slideshow.css
+++ b/app/global-styles/Slideshow.css
@@ -1,55 +1,23 @@
 /* ----- Slideshow Components ----- */
-.carousel {
-  padding: 2rem;
-}
-
-.slider-wrapper {
-  position: relative;
-  max-width: 48rem;
-  margin: 0 auto;
-}
-
-.slider {
-	display: flex;
-	aspect-ratio: 16 / 9;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	border-radius: 0.5rem;
-	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
-	scrollbar-width: none; /* Hide scrollbar Firefox */
-}
-
-.slider::-webkit-scrollbar {
-	display: none;
-}
-
-.slider Image {
-  flex: 1 0 100%;
-  scroll-snap-align: start;
-  object-fit: cover;
-}
-
-.slider-nav {
-  display: flex;
-  column-gap: 1rem;
+.image-stack{
+  width: 10rem;
+  aspect-ratio: 16/9;
   position: absolute;
-  bottom: 1.25rem;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
+  background-color: red;
+  padding: .5rem;
 }
 
-.slider-nav a {
-  width: .5rem;
-  height: .5rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.75;
-  transition: opacity ease 250ms;
+.image-stack a {
+  position: absolute;
+  aspect-ratio: 16/9;
+  width: 10rem;
+  background-color: red;
 }
 
-.slider-nav a:hover {
-  opacity: 1;
+.stack-image {
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  
 }
