Better Team section on landing page and added accessibility

--- a/app/global-styles/Slideshow.css
+++ b/app/global-styles/Slideshow.css
@@ -1,23 +1,54 @@
-/* ----- Slideshow Components ----- */
-.image-stack{
-  width: 10rem;
-  aspect-ratio: 16/9;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: red;
-  padding: .5rem;
+.horizontal-scroll-carousel {
+  position: relative;
+  height: 300vh;
+  background-color: #333; /* Replace with your desired background color */
 }
 
-.image-stack a {
-  position: absolute;
-  aspect-ratio: 16/9;
-  width: 10rem;
-  background-color: red;
+.sticky-container {
+  position: sticky;
+  top: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  overflow: hidden;
 }
 
-.stack-image {
-  aspect-ratio: 16/9;
-  object-fit: cover;
-  
+.card-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.card {
+  position: relative;
+  height: 450px;
+  width: 450px;
+  overflow: hidden;
+  background-color: #ddd; /* Replace with your desired background color */
+}
+
+.card-image {
+  background-size: cover;
+  background-position: center;
+  transition: transform 300ms;
+}
+
+.card:hover .card-image {
+  transform: scale(1.1);
+}
+
+.card-content {
+  position: absolute;
+  inset: 0;
+  display: grid;
+  place-content: center;
+}
+
+.card p {
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+  padding: 8px;
+  font-size: 6rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  backdrop-filter: blur(10px);
 }
