--- a/app/globals.css
+++ b/app/globals.css
@@ -240,6 +240,13 @@ body.side-nav-open {
   background-color: #dbb145;
 }
 
+.first-section-separater {
+  width: 90%;
+  height: 1px;
+  margin: 1rem auto 3rem auto;
+  background-color: #dbb145;
+}
+
 .section-header {
   font-size: var(--secondary-heading);
   color: var(--primary-complement);
@@ -293,33 +300,39 @@ body.side-nav-open {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.75rem 1.25rem 0.75rem 1.25rem;
+  padding: 1.25rem 1.25rem 0.75rem 1.25rem;
   border-radius: 3%;
+  width: 16rem;
+  height:22rem;
   background-color: var(--primary-dark);
-  transition: 1;
+  transition: .5s;
 }
 
-.team :hover:not(.photo, .name, .role):hover {
-  filter: drop-shadow(0 0 1rem #e7bfcf);
-  box-shadow: rgba(255, 206, 27, 0.4) 0px 5px 5px 5px,
-    rgba(255, 206, 27, 0.3) 0px 8px 8px 8px,
-    rgba(255, 206, 27, 0.2) 0px 12px 12px 12px;
-  scale: 1.05;
-  transition: 0.4s;
+.member.selected {
+  width: 20rem;
+  height: 28rem;
+  transition: .75s ease-in-out;
 }
 
 .member .photo {
-  width: 12rem;
-  height: 12rem;
+  width: 14rem;
+  height: 16rem;
+  border-radius: 3%;
   object-fit: cover;
+  object-position: top;
 }
 
 .member .name {
+  font-size: 15pt;
   margin-top: 4px;
 }
 
 .member .role {
-  font-size: 11pt;
+  font-size: 13pt;
+}
+
+.member .link{
+  
 }
 
 .team-banner {
@@ -501,6 +514,6 @@ body.side-nav-open {
   background-image: url("../peaks3.svg");
 }
 
-.peaks4 {
-  background-image: url("../peaks4.svg");
+.peaks5 {
+  background-image: url("../peaks5.svg");
 }
